Enable ability to use KeyVault with Managed Service Identity to store secrets in Azure.

--- a/SimpleSqlBackend/Web.config
+++ b/SimpleSqlBackend/Web.config
@@ -4,10 +4,17 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings></appSettings>
+  <appSettings>
+		<!-- Set the connection string to use when running localhost or when not using Managed Service Identity + KeyVault -->
+		<add key="DbConnectionString" value="Server=localhost;Initial Catalog=TodoItems;Integrated Security=SSPI;Persist Security Info=True;" />
+
+		<!-- When using Managed Service Identity + KeyVault, put the URI of the secret below -->
+		<add key="DbConnStrKeyVaultSecretUri" value="URI_TO_SECRET" />
+	</appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+		<customErrors mode="Off" />
   </system.web>
   
   <runtime>
@@ -35,6 +42,18 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
+      </dependentAssembly>
+		  <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Clients.ActiveDirectory" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.17.2.31801" newVersion="3.17.2.31801" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Clients.ActiveDirectory.Platform" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.17.2.31801" newVersion="3.17.2.31801" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Azure.Services.AppAuthentication" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.3.0" newVersion="1.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
