--- a/SimpleSqlBackend/packages.config
+++ b/SimpleSqlBackend/packages.config
@@ -6,7 +6,25 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.Azure.Amqp" version="2.3.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.WebKey" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Services.AppAuthentication" version="1.0.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.17.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.2" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.12" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.2" targetFramework="net461" />
+  <package id="System.Net.WebSockets" version="4.0.0" targetFramework="net461" />
+  <package id="System.Net.WebSockets.Client" version="4.0.2" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.1.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net461" />
 </packages>
